Topics: add several new topic pages

--- a/_data/schemas/topics.yaml
+++ b/_data/schemas/topics.yaml
@@ -30,6 +30,7 @@ properties:
         - Contract Protocols
         - Developer Tools
         - Fee Management
+        - Invoicing
         - Lightning Network
         - Lightweight Client Support
         - Liquidity Management
