--- a/_data/compatibility/bitnob.yaml
+++ b/_data/compatibility/bitnob.yaml
@@ -39,12 +39,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32_p2wsh"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "untested"
       segwit_v1: "true"
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/bitnob/segwit/send-screen-default.png
       caption: >
