--- a/_data/compatibility/coinbase.yaml
+++ b/_data/compatibility/coinbase.yaml
@@ -53,12 +53,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "false"
+      bech32m: "untested"
       default: "p2sh_wrapped"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Fails address validation client side in the UI."
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/coinbase/segwit/receive-screen.png
       caption: >
