--- a/_data/compatibility/opendime.yaml
+++ b/_data/compatibility/opendime.yaml
@@ -46,12 +46,15 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "false"
+      bech32m: "untested"
       default: "p2pkh"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "na"
       segwit_v1: "Untested."
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/opendime/segwit/receive-screen.png
       caption: >
