--- a/_data/compatibility/bitcoin-wallet.yaml
+++ b/_data/compatibility/bitcoin-wallet.yaml
@@ -13,8 +13,11 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "true"
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
