--- a/_data/compatibility/bitpowr.yaml
+++ b/_data/compatibility/bitpowr.yaml
@@ -48,12 +48,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "p2pkh"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "true"
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/bitpowr/segwit/receive-screen.png
       caption: >
