--- a/_data/compatibility/bitstamp.yaml
+++ b/_data/compatibility/bitstamp.yaml
@@ -46,13 +46,16 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"  # https://www.bitstamp.net/article/weve-added-support-bech32-bitcoin-addresses-bitsta/
+      bech32m: "untested"
       default: "p2sh_wrapped_p2wsh"
     send:
       bech32: "true"   # https://www.bitstamp.net/article/weve-added-support-bech32-bitcoin-addresses-bitsta/
+      bech32m: "untested"
       change_bech32: "untested"
       segwit_v1: "Address text input doesn’t allow bech32 addresses due to
       character limits."
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/bitstamp/segwit/receive-screen.png
       caption: >
