--- a/_data/compatibility/blocksettle.yaml
+++ b/_data/compatibility/blocksettle.yaml
@@ -64,12 +64,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Error message during broadcasting of transaction"
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/blocksettle/segwit/SegWit_wallet_overview.png
       caption: >
