--- a/_data/compatibility/cashapp.yaml
+++ b/_data/compatibility/cashapp.yaml
@@ -56,12 +56,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "untested"
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/cashapp/segwit/receive-screen.png
       caption: >
