--- a/_data/compatibility/greenaddress.yaml
+++ b/_data/compatibility/greenaddress.yaml
@@ -108,12 +108,15 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "false"
+      bech32m: "untested"
       default: "p2sh_wrapped"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "false"
       segwit_v1: "Fails on validation of the address."
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/greenaddress/segwit/receive-screen.png
       caption: >
