--- a/_data/compatibility/jaxx.yaml
+++ b/_data/compatibility/jaxx.yaml
@@ -38,12 +38,15 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "false"
+      bech32m: "untested"
       default: "p2pkh"
     send:
       bech32: "false"
+      bech32m: "untested"
       change_bech32: "false"
       segwit_v1: "Fails on validation of the address."
       bech32_p2wsh: "false"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/jaxx/segwit/receive-screen.png
       caption: >
