--- a/_data/compatibility/river-financial.yaml
+++ b/_data/compatibility/river-financial.yaml
@@ -41,13 +41,16 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32_p2wsh"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Transaction can be created and broadcast, relayed by peers
       compatible with Bitcoin Core v0.19.0.1 or above."
       bech32_p2wsh: "true"
+      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/river-financial/segwit/deposit_onchain.png
       caption: >
