--- a/_data/compatibility/bitcoin-wallet.yaml
+++ b/_data/compatibility/bitcoin-wallet.yaml
@@ -13,11 +13,10 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "true"
-      bech32m: "untested"
+      bech32m: "false"
       default: "bech32"
     send:
       bech32: "true"
-      bech32m: "untested"
+      bech32m: "true"
       change_bech32: "true"
       bech32_p2wsh: "true"
-      bech32m_p2wsh: "untested"
