--- a/_data/compatibility/bitmex.yaml
+++ b/_data/compatibility/bitmex.yaml
@@ -39,11 +39,10 @@ segwit:
       default: "bech32"
     send:
       bech32: "true"   # https://blog.bitmex.com/bitmex-enables-bech32-sending-support/
-      bech32m: "untested"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Bech32m supported." # https://twitter.com/BitMEXResearch/status/1492152557044654082
       bech32_p2wsh: "true"
-      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/bitmex/segwit/receive-screen.png
       caption: >
