--- a/_data/compatibility/casa.yaml
+++ b/_data/compatibility/casa.yaml
@@ -44,11 +44,10 @@ segwit:
       default: "p2sh_wrapped_p2wsh"
     send:
       bech32: "true" 
-      bech32m: "untested"
+      bech32m: "true"
       change_bech32: "false"
       segwit_v1: "Fails on signing attempt."
       bech32_p2wsh: "true"
-      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/casa/segwit/receive-p2sh-wrapped-segwit.png
       caption: >
