--- a/_data/compatibility/cashapp.yaml
+++ b/_data/compatibility/cashapp.yaml
@@ -60,11 +60,10 @@ segwit:
       default: "bech32"
     send:
       bech32: "true" 
-      bech32m: "untested"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "untested"
       bech32_p2wsh: "true"
-      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/cashapp/segwit/receive-screen.png
       caption: >
