--- a/_data/compatibility/mycelium-android.yaml
+++ b/_data/compatibility/mycelium-android.yaml
@@ -43,15 +43,14 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"  # https://github.com/mycelium-com/wallet-android/issues/425#issuecomment-440792004
-      bech32m: "untested"
+      bech32m: "false"
       default: "p2sh_wrapped"
     send:
       bech32: "true" # https://github.com/mycelium-com/wallet-android/issues/425#issuecomment-440792004
-      bech32m: "untested"
+      bech32m: "false"
       change_bech32: "true"
       segwit_v1: "Fails during bech32m address validation."
       bech32_p2wsh: "true"
-      bech32m_p2wsh: "untested"
   examples:
     - image: /img/compatibility/mycelium-android/segwit/receive-screen.png
       caption: >
