--- a/_data/schemas/compatibility.yaml
+++ b/_data/schemas/compatibility.yaml
@@ -169,7 +169,7 @@ properties:
                 type: string
                 enum: *feat
               bech32m:
-                description: Does the wallet allow sending to Bech32m native segwit addresses?
+                description: Does the wallet allow sending to Bech32m addresses?
                 type: string
                 enum: *feat
               change_bech32:
