Compatibility: Bech32m support (#1521)
Compatibility: Added support for bech32m
Compatibility: Add cells for bech32m send/receive

--- a/_data/compatibility/abra.yaml
+++ b/_data/compatibility/abra.yaml
@@ -59,9 +59,11 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "false"
+      bech32m: "untested"
       default: "p2pkh"
     send:
       bech32: "false" 
+      bech32m: "untested"
       change_bech32: "untested"
       segwit_v1: "Bech32 not supported."
       bech32_p2wsh: "false"
