--- a/_data/compatibility/binance.yaml
+++ b/_data/compatibility/binance.yaml
@@ -44,9 +44,11 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "false"
+      bech32m: "false"
       default: "p2pkh"
     send:
       bech32: "true" 
+      bech32m: "false"
       change_bech32: "untested"
       segwit_v1: "Does not pass front end javascript validation"
       bech32_p2wsh: "false"
