--- a/_data/compatibility/coinbase.yaml
+++ b/_data/compatibility/coinbase.yaml
@@ -53,9 +53,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "false"
+      bech32m: "false"
       default: "p2sh_wrapped"
     send:
       bech32: "true" 
+      bech32m: "false"
       change_bech32: "true"
       segwit_v1: "Fails address validation client side in the UI."
       bech32_p2wsh: "true"
