--- a/_data/compatibility/edge.yaml
+++ b/_data/compatibility/edge.yaml
@@ -56,9 +56,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "false"
+      bech32m: "untested"
       default: "p2sh_wrapped"
     send:
       bech32: "true"
+      bech32m: "true"
       change_bech32: "false"
       segwit_v1: "An attempt to send to a bech32m taproot address shows an error that the address is invalid."
       bech32_p2wsh: "true"
