--- a/_data/compatibility/samourai.yaml
+++ b/_data/compatibility/samourai.yaml
@@ -70,9 +70,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "false"
       default: "bech32"
     send:
       bech32: "true"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Fails on broadcast of transaction to the network."
       bech32_p2wsh: "true"
