--- a/_data/compatibility/trezor.yaml
+++ b/_data/compatibility/trezor.yaml
@@ -48,9 +48,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "true"
       default: "bech32"
     send:
       bech32: "true"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Fails on validation of the address."
       bech32_p2wsh: "true"
