--- a/_data/compatibility/bitmex.yaml
+++ b/_data/compatibility/bitmex.yaml
@@ -35,9 +35,11 @@ segwit:
     receive:
       p2sh_wrapped: "false"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true"   # https://blog.bitmex.com/bitmex-enables-bech32-sending-support/
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Bech32m supported." # https://twitter.com/BitMEXResearch/status/1492152557044654082
       bech32_p2wsh: "true"
