--- a/_data/compatibility/bitpowr.yaml
+++ b/_data/compatibility/bitpowr.yaml
@@ -48,9 +48,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "p2pkh"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "true"
       bech32_p2wsh: "true"
