--- a/_data/compatibility/bitrefill.yaml
+++ b/_data/compatibility/bitrefill.yaml
@@ -47,9 +47,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "false"
+      bech32m: "untested"
       default: "p2sh_wrapped"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Address does not pass validation."
       bech32_p2wsh: "true"
