--- a/_data/compatibility/blocksettle.yaml
+++ b/_data/compatibility/blocksettle.yaml
@@ -64,9 +64,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true" 
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Error message during broadcasting of transaction"
       bech32_p2wsh: "true"
