--- a/_data/compatibility/ledger-live.yaml
+++ b/_data/compatibility/ledger-live.yaml
@@ -52,9 +52,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "true"
       default: "bech32"
     send:
       bech32: "true"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Fails when transaction is sent to the hardwave device for signing."
       bech32_p2wsh: "true"
