--- a/_data/compatibility/mycelium-android.yaml
+++ b/_data/compatibility/mycelium-android.yaml
@@ -43,9 +43,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"  # https://github.com/mycelium-com/wallet-android/issues/425#issuecomment-440792004
+      bech32m: "false"
       default: "p2sh_wrapped"
     send:
       bech32: "true" # https://github.com/mycelium-com/wallet-android/issues/425#issuecomment-440792004
+      bech32m: "false"
       change_bech32: "true"
       segwit_v1: "Fails during bech32m address validation."
       bech32_p2wsh: "true"
