--- a/_data/compatibility/purse.yaml
+++ b/_data/compatibility/purse.yaml
@@ -35,9 +35,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32"
     send:
       bech32: "true"
+      bech32m: "untested"
       change_bech32: "true"
       segwit_v1: "Transaction can be created and broadcast, relayed by peers
       compatible with Bitcoin Core v0.19.0.1 or above."
