--- a/_data/compatibility/river-financial.yaml
+++ b/_data/compatibility/river-financial.yaml
@@ -41,9 +41,11 @@ segwit:
     receive:
       p2sh_wrapped: "true"
       bech32: "true"
+      bech32m: "untested"
       default: "bech32_p2wsh"
     send:
       bech32: "true"
+      bech32m: "true"
       change_bech32: "true"
       segwit_v1: "Transaction can be created and broadcast, relayed by peers
       compatible with Bitcoin Core v0.19.0.1 or above."
