updates - murch feedback

--- a/_data/matrix/Bitcoin_Core_Wallet.yaml
+++ b/_data/matrix/Bitcoin_Core_Wallet.yaml
@@ -8,7 +8,7 @@ feature:
   device: "Desktop"
   os: "Linux, OS, Windows"
   web: "No"
-  hw_interface: "Yes"
+  hwi: "Yes"
   default_receive: "P2WPKH"
   bech32: "Full Support (send & receive)"
   bech32m: "Full Support (send & receive)"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "No"
   cpfp: "Full Support (send & receive)"
   descriptors: "Yes"
-  pbst_version: "V0"
-  pbst_export: "Yes"
-  pbst_update_finalize: "Yes"
+  psbt_version: "V0"
+  psbt_export: "Yes"
+  psbt_update_finalize: "Yes"
   musig2: "No Support"
   coinjoin: "No Support"
   payjoin_BIP78: "No Support"
@@ -29,8 +29,8 @@ feature:
   payment_code: "No Support"
   silent_payments_BIP352: "No Support"
   silent_payments_dns: "No Support"
-  lightning_11: "No Support"
-  lightning_12: "No Support"
-  lightning_12_dns: "No Support"
-  lightning_lnurl: "No Support"
-  lightning_lnurl_hrla: "No Support"
+  lightning_11: "Not Applicable"
+  lightning_12: "Not Applicable"
+  lightning_12_dns: "Not Applicable"
+  lightning_lnurl: "Not Applicable"
+  lightning_lnurl_hrla: "Not Applicable"
