--- a/_data/matrix/Bitkit.yaml
+++ b/_data/matrix/Bitkit.yaml
@@ -7,8 +7,8 @@ homepage: "https://bitkit.to/"
 feature:
   device: "Mobile"
   os: "Android, iOS"
-  web: "Not Applicable"
-  hw_interface: "No"
+  web: "No"
+  hwi: "No"
   default_receive: "P2WPKH"
   bech32: "Full Support (send & receive)"
   bech32m: "Full Support (send & receive)"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "No"
   cpfp: "Full Support (send & receive)"
   descriptors: "No"
-  pbst_version: "No Support"
-  pbst_export: "No"
-  pbst_update_finalize: "No"
+  psbt_version: "No Support"
+  psbt_export: "No"
+  psbt_update_finalize: "No"
   musig2: "No Support"
   coinjoin: "No Support"
   payjoin_BIP78: "Not Applicable"
