--- a/_data/matrix/Phoenix.yaml
+++ b/_data/matrix/Phoenix.yaml
@@ -8,19 +8,19 @@ feature:
   device: "Mobile"
   os: "Android, iOS"
   web: "No"
-  hw_interface: "No"
+  hwi: "No"
   default_receive: "P2TR via swap-in-potentiam"
   bech32: "Send Support"
   bech32m: "Full Support (send & receive)"
-  segwit_change: "No"
+  segwit_change: "Not Applicable"
   full_rbf_bump_fee: "No"
   full_rbf_cancel_txn: "No"
   full_rbf_notification: "No"
   cpfp: "Full Support (send & receive)"
   descriptors: "Yes"
-  pbst_version: "Not Applicable"
-  pbst_export: "Not Applicable"
-  pbst_update_finalize: "Not Applicable"
+  psbt_version: "Not Applicable"
+  psbt_export: "Not Applicable"
+  psbt_update_finalize: "Not Applicable"
   musig2: "Full Support (send & receive)"
   coinjoin: "Not Applicable"
   payjoin_BIP78: "Not Applicable"
