--- a/_data/matrix/Casa.yaml
+++ b/_data/matrix/Casa.yaml
@@ -8,7 +8,7 @@ feature:
   device: "Mobile"
   os: "Android, iOS"
   web: "No"
-  hw_interface: "Yes"
+  hwi: "Yes"
   default_receive: "P2WSH"
   bech32: "Send Support"
   bech32m: "Send Support"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "No"
   cpfp: "No Support"
   descriptors: "Yes"
-  pbst_version: "V2"
-  pbst_export: "Yes"
-  pbst_update_finalize: "No"
+  psbt_version: "V2"
+  psbt_export: "Yes"
+  psbt_update_finalize: "No"
   musig2: "No Support"
   coinjoin: "No Support"
   payjoin_BIP78: "No Support"
