--- a/_data/matrix/Envoy.yaml
+++ b/_data/matrix/Envoy.yaml
@@ -8,7 +8,7 @@ feature:
   device: "Mobile"
   os: "Android, iOS"
   web: "No"
-  hw_interface: "No"
+  hwi: "No"
   default_receive: "P2WPKH"
   bech32: "Full Support (send & receive)"
   bech32m: "Full Support (send & receive)"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "No"
   cpfp: "Full Support (send & receive)"
   descriptors: "Yes"
-  pbst_version: "V0"
-  pbst_export: "Yes"
-  pbst_update_finalize: "No"
+  psbt_version: "V0"
+  psbt_export: "Yes"
+  psbt_update_finalize: "No"
   musig2: "No Support"
   coinjoin: "No Support"
   payjoin_BIP78: "No Support"
