--- a/_data/matrix/Passport.yaml
+++ b/_data/matrix/Passport.yaml
@@ -5,10 +5,10 @@ keyfeatures: "Open-source, intuitive, beautiful, and highly secure self-custody.
 homepage: "https://foundation.xyz/passport"
 
 feature:
-  device: ""
-  os: ""
+  device: "Not Applicable"
+  os: "Not Applicable"
   web: "Not Applicable"
-  hw_interface: "No"
+  hwi: "No"
   default_receive: "P2WPKH/P2TR"
   bech32: "Full Support (send & receive)"
   bech32m: "Full Support (send & receive)"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: ""
   cpfp: ""
   descriptors: "Yes"
-  pbst_version: "V0"
-  pbst_export: "Yes"
-  pbst_update_finalize: "Yes"
+  psbt_version: "V0"
+  psbt_export: "Yes"
+  psbt_update_finalize: "Yes"
   musig2: "No Support"
   coinjoin: "Not Applicable"
   payjoin_BIP78: ""
