--- a/_data/matrix/Wasabi_Wallet_.yaml
+++ b/_data/matrix/Wasabi_Wallet_.yaml
@@ -8,7 +8,7 @@ feature:
   device: "Desktop"
   os: "Linux, OS, Windows"
   web: "No"
-  hw_interface: "Yes"
+  hwi: "Yes"
   default_receive: "P2WPKH"
   bech32: "Full Support (send & receive)"
   bech32m: "Full Support (send & receive)"
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "Yes"
   cpfp: "Full Support (send & receive)"
   descriptors: "Yes"
-  pbst_version: "V2"
-  pbst_export: "Yes"
-  pbst_update_finalize: "Yes"
+  psbt_version: "V2"
+  psbt_export: "Yes"
+  psbt_update_finalize: "Yes"
   musig2: "No Support"
   coinjoin: "Full Support (send & receive)"
   payjoin_BIP78: "Send Support"
