Shorten to just BitGo

--- a/_data/matrix/BitGo_Bitcoin_Wallet.yaml
+++ b/_data/matrix/BitGo_Bitcoin_Wallet.yaml
@@ -1,5 +1,5 @@
 ---
-name: "BitGo Bitcoin Wallet"
+name: "BitGo"
 category: "Software Wallet (L1&L2)"
 keyfeatures: "Web-Based, Self-Custodial 2-of-3 Multisig Wallet and Lightning for Enterprise Customers"
 homepage: "https://www.bitgo.com"
