--- a/_data/matrix/BitGo.yaml
+++ b/_data/matrix/BitGo.yaml
@@ -18,9 +18,9 @@ feature:
   full_rbf_notification: "Yes"
   cpfp: "Full Support (send & receive)"
   descriptors: "No"
-  pbst_version: "V0"
-  pbst_export: "Yes"
-  pbst_update_finalize: "Yes"
+  psbt_version: "V0"
+  psbt_export: "Yes"
+  psbt_update_finalize: "Yes"
   musig2: "Full Support (send & receive)"
   coinjoin: "No Support"
   payjoin_BIP78: "No Support"
