feat(pt): add Portuguese scaffolding

--- a/_config.yml
+++ b/_config.yml
@@ -84,5 +84,7 @@ languages:
     name: German
   - code: fr
     name: French
+  - code: pt
+    name: Portuguese
 ## In-text aliases
 trb: "709,632" # TapRoot Block (activation)
